tests/neg/_TypeInterweaving/unmatched2.scala




def f2[T(x: T) = ??? // error
